# LyricsMeaning-with-AI

./: .gitignore  README.md  app.py  genius_lyrics.py  lyrics_meaning.py  pyproject.toml
backend/: crud.py  database.py  genius_lyrics.py  lyrics_meaning.py  main.py  models.py  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: b1977789584c_initial_tables_songs_analyses_search_.py
frontend/: .env.production  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisDisplay.jsx  Header.jsx  LyricsDisplay.jsx  PopularSongs.jsx  SearchForm.jsx
frontend/src/hooks/: useStreamAnalysis.js
frontend/src/services/: api.js
