[project]
name = "lyricsmeaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "google-generativeai>=0.8.5",
    "lyricsgenius>=3.7.2",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.49.1",
    "uvicorn>=0.37.0",
]
